salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/Dedupe_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Dedupe Rule</label>
    <pluralLabel>Dedupe Rules</pluralLabel>
    <description>One row per scenario field. Rows sharing a Scenario Key form one scenario; scenarios mirror the live Plauti Duplicate Check configuration (docs/ALIGNMENT.md).</description>
</CustomObject>