salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Auto_Merge_Score__c.field-meta.xml
<CustomField>
    <fullName>Auto_Merge_Score__c</fullName>
    <label>Auto Merge Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>