salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Text</type>
    <length>100</length>
</CustomField>