salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Id_Points__c.field-meta.xml
<CustomField>
    <fullName>Id_Points__c</fullName>
    <label>ID Points</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>