salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Match_Method__c.field-meta.xml
<CustomField>
    <fullName>Match_Method__c</fullName>
    <label>Match Method</label>
    <type>Text</type>
    <length>30</length>
</CustomField>