salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Plauti_Scenario_Id__c.field-meta.xml
<CustomField>
    <fullName>Plauti_Scenario_Id__c</fullName>
    <label>Plauti Scenario Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>