salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Scenario_Key__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Key__c</fullName>
    <label>Scenario Key</label>
    <type>Text</type>
    <length>60</length>
</CustomField>