salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Scenario_Label__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Label__c</fullName>
    <label>Scenario Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>