salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Score_Method__c.field-meta.xml
<CustomField>
    <fullName>Score_Method__c</fullName>
    <label>Score Method</label>
    <type>Text</type>
    <length>20</length>
</CustomField>