salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>