salesforce-dedupe/force-app/main/default/objects/Dedupe_Rule__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>